--- a/agentApp/agentApp/src/main/resources/application.properties
+++ b/agentApp/agentApp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Spring DataSource
-spring.datasource.driverClassName=org.postgresql.Driver
-
+#Sring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/agentXML
