--- a/Servisi/AuthorizationService/src/main/resources/application.properties
+++ b/Servisi/AuthorizationService/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+#Spring DataSource
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mikros
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+  #JPA-Hibernate
+spring.jpa.show-sql = true
+
+  #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
+spring.jpa.hibernate.ddl-auto=create-drop
+
+  #https://stackoverflow.com/questions/43905119/postgres-error-method-org-postgresql-jdbc-pgconnection-createclob-is-not-imple
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+  #optimizacija za postgres upite
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+server.port=8095
+
+
+eureka.client.service-url.defaultZone=http://${REGISTRY_HOST:localhost}:${REGISTRY_PORT:8761}/eureka/
+eureka.client.service-url.healthcheck.enabled=true
+eureka.instance.prefer-ip-address=true
+
+spring.application.name=eureka-authorization-service
+eureka.instance.hostname=localhost
+
 
