--- a/Servisi/ProfilService/src/main/resources/application.properties
+++ b/Servisi/ProfilService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/oglas
+spring.datasource.url=jdbc:postgresql://localhost:5432/profil
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -19,13 +19,13 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
-server.port=8092
+server.port=8101
 
 
 eureka.client.service-url.defaultZone=http://${REGISTRY_HOST:localhost}:${REGISTRY_PORT:8761}/eureka/
 eureka.client.service-url.healthcheck.enabled=true
 eureka.instance.prefer-ip-address=true
 
-spring.application.name=eureka-oglas-service
+spring.application.name=eureka-authorization-service
 eureka.instance.hostname=localhost
 
