prepravka broja porta

--- a/Servisi/OglasService/src/main/resources/application.properties
+++ b/Servisi/OglasService/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
-server.port=8092
+server.port=
 
 
-eureka.client.service-url.defaultZone=http://${REGISTRY_HOST:localhost}:${REGISTRY_PORT:8761}/eureka/
+eureka.client.service-url.defaultZone=h8092ttp://${REGISTRY_HOST:localhost}:${REGISTRY_PORT:8761}/eureka/
 eureka.client.service-url.healthcheck.enabled=true
 eureka.instance.prefer-ip-address=true
 
