Oglas servis prepravka

--- a/Servisi/AuthorizationService/src/main/resources/application.properties
+++ b/Servisi/AuthorizationService/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
 server.port=8095
-
+spring.main.allow-bean-definition-overriding=true
 
 eureka.client.service-url.defaultZone=http://${REGISTRY_HOST:localhost}:${REGISTRY_PORT:8761}/eureka/
 eureka.client.service-url.healthcheck.enabled=true
