--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 zuul.routes.eureka-oglas-service.path=/oglas/**
 zuul.routes.eureka-zahtev-service.path=/zahtev/**
+zuul.routes.eureka-authorization-service=/auth/**
 
 ribbon.eureka.enabled=true
 
