Proba dodavanja bezbednosti na mikroservise

--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -6,3 +6,5 @@ ribbon.eureka.enabled=true
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ReadTimeout=60000
+
+zuul.ribbon.eager-load.enabled=true
