--- a/Servisi/AuthorizationService/pom.xml
+++ b/Servisi/AuthorizationService/pom.xml
@@ -17,13 +17,17 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR4</spring-cloud.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <slf4jVersion>1.6.1</slf4jVersion>
+        <log4j2Version>2.7</log4j2Version>
 	</properties>
 
 	<dependencies>
-		<dependency>
+	    <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+		</dependency> 
 		
 		<!-- 
 		<dependency>
@@ -92,6 +96,91 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+		
+		<!-- Config server -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<dependency>
+		   <groupId>org.apache.logging.log4j</groupId>
+		   <artifactId>log4j-api</artifactId>
+		</dependency>
+		
+		<dependency>
+		   <groupId>org.apache.logging.log4j</groupId>
+		   <artifactId>log4j-core</artifactId>
+		</dependency>
+		
+		<dependency>
+    <groupId>org.springframework.hateoas</groupId>
+    <artifactId>spring-hateoas</artifactId>
+    <version>0.15.0.RELEASE</version>
+</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j2Version}</version>
+		</dependency>
+		 <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+		<dependency>
+   			 <groupId>org.springframework.security.oauth</groupId>
+    		<artifactId>spring-security-oauth2</artifactId>
+   			 <version>2.3.5.RELEASE</version>
+		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
+	<dependency>
+    	<groupId>org.springframework.security</groupId>
+    	<artifactId>spring-security-jwt</artifactId>
+    	<version>1.0.10.RELEASE</version>
+	</dependency>
 	</dependencies>
 
 	<dependencyManagement>
