--- a/Servisi/ZahtevService/pom.xml
+++ b/Servisi/ZahtevService/pom.xml
@@ -16,7 +16,12 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+        <slf4jVersion>1.6.1</slf4jVersion>
+        <log4j2Version>2.7</log4j2Version>
+        <axonVersion>2.4.6</axonVersion>
 		<spring-cloud.version>Hoxton.SR4</spring-cloud.version>
 	</properties>
 
@@ -30,12 +35,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
-		<!-- 
+		 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency> -->
+		</dependency> 
 		
 		<dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -78,6 +82,121 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency> 
+		
+		  <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+        </dependency>
+
+		<dependency>
+			<groupId>org.axonframework</groupId>
+			<artifactId>axon-core</artifactId>
+			<version>${axonVersion}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.axonframework</groupId>
+		    <artifactId>axon-amqp</artifactId>
+		    <version>${axonVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.axonframework</groupId>
+			<artifactId>axon-test</artifactId>
+			<version>${axonVersion}</version>
+		</dependency>
+			<!-- oauth -->
+	<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+		<dependency>
+   			 <groupId>org.springframework.security.oauth</groupId>
+    		<artifactId>spring-security-oauth2</artifactId>
+   			 <version>2.3.5.RELEASE</version>
+		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
+	<dependency>
+    	<groupId>org.springframework.security</groupId>
+    	<artifactId>spring-security-jwt</artifactId>
+    	<version>1.0.10.RELEASE</version>
+	</dependency>
+
+		<!-- Config server -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		   <exclusions>
+			  <exclusion>
+				 <groupId>ch.qos.logback</groupId>
+				 <artifactId>logback-classic</artifactId>
+			  </exclusion>
+		   </exclusions>
+		</dependency>
+		 
+		<dependency>
+    		<groupId>com.rabbitmq</groupId>
+    		<artifactId>amqp-client</artifactId>
+    		<version>4.1.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4jVersion}</version>
+		</dependency>
+
+		<dependency>
+		   <groupId>org.apache.logging.log4j</groupId>
+		   <artifactId>log4j-api</artifactId>
+		   <version>${log4j2Version}</version>
+		</dependency>
+		
+		<dependency>
+		   <groupId>org.apache.logging.log4j</groupId>
+		   <artifactId>log4j-core</artifactId>
+		   <version>${log4j2Version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j2Version}</version>
 		</dependency>
 	</dependencies>
 
