--- a/Servisi/AuthorizationService/src/main/resources/application.properties
+++ b/Servisi/AuthorizationService/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.application.name=eureka-authorization-service
 eureka.instance.hostname=localhost
 
 
+auth.app.jwtSecret={AUTH_JWTSECRET}
+auth.app.jwtExpiration=864000
