--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -6,3 +6,16 @@ ribbon.eureka.enabled=true
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ReadTimeout=60000
+
+
+zuul.routes.AuthorizationService.sensitive-headers=Authorization
+zuul.routes.AuthorizationService.service-id=AuthorizationService
+zuul.routes.AdminService.sensitive-headers=Authorization
+zuul.routes.AdminService.service-id=AdminService
+zuul.routes.OglasService.sensitive-headers=Authorization
+zuul.routes.OglasService.service-id=OglasService
+zuul.routes.ZahtevService.sensitive-headers=Authorization
+zuul.routes.ZahtevService.service-id=ZahtevService
+zull.sensitive-headers=Authorization
+zull.ignored-headers= Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+
