--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 zuul.routes.eureka-oglas-service.path=/oglas/**
+zuul.routes.eureka-oglas-service.service-id=eureka-oglas-service
 zuul.routes.eureka-zahtev-service.path=/zahtev/**
-zuul.routes.eureka-authorization-service=/auth/**
+zuul.routes.eureka-zahtev-service.service-id=eureka-zahtev-service
+zuul.routes.eureka-authorization-service.path=/auth/**
+zuul.routes.eureka-authorization-service.service-id=eureka-authorization-service
 
 ribbon.eureka.enabled=true
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ReadTimeout=60000
+
+zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie 
