Sredjivanje dockerfila za agentsku aplikaciju

--- a/AgentAppBackend/src/main/resources/application.properties
+++ b/AgentAppBackend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_SCHEMA:agent}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
