popravljen search service,agent i zahtev service
popravljen search service,agent i zahtev service

--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -4,6 +4,8 @@ zuul.routes.eureka-zahtev-service.path=/zahtev/**
 zuul.routes.eureka-zahtev-service.service-id=eureka-zahtev-service
 zuul.routes.eureka-authorization-service.path=/auth/**
 zuul.routes.eureka-authorization-service.service-id=eureka-authorization-service
+zuul.routes.eureka-search-service.path=/search/**
+zuul.routes.eureka-search-service.service-id=eureka-search-service
 
 ribbon.eureka.enabled=true
 
