--- a/Servisi/SearchService/src/main/resources/application.properties
+++ b/Servisi/SearchService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_SCHEMA:postgres}
+spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_SCHEMA:search}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:root}
 
@@ -27,7 +27,7 @@ eureka.client.service-url.defaultZone=http://${REGISTRY_HOST:localhost}:${REGIST
 eureka.client.service-url.healthcheck.enabled=true
 eureka.instance.prefer-ip-address=true
 
-spring.application.name=eureka-oglas-service
+spring.application.name=eureka-search-service
 eureka.instance.hostname=localhost
 
 
