--- a/AgentAppFront/package.json
+++ b/AgentAppFront/package.json
@@ -26,6 +26,7 @@
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "websocket-extensions": "^0.1.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
