--- a/ServisiFront/package.json
+++ b/ServisiFront/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@material/button": "^6.0.0",
+    "@material/dialog": "^6.0.0",
     "@material/menu": "^6.0.0",
     "hammerjs": "^2.0.8",
+    "material-table": "^1.60.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.4.0",
