--- a/Servisi/AuthorizationService/src/main/resources/application.properties
+++ b/Servisi/AuthorizationService/src/main/resources/application.properties
@@ -29,4 +29,5 @@ eureka.instance.prefer-ip-address=true
 spring.application.name=eureka-authorization-service
 eureka.instance.hostname=localhost
 
-
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
