--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -6,8 +6,10 @@ zuul.routes.eureka-authorization-service.path=/auth/**
 zuul.routes.eureka-authorization-service.service-id=eureka-authorization-service
 zuul.routes.eureka-search-service.path=/search/**
 zuul.routes.eureka-search-service.service-id=eureka-search-service
+zuul.routes.eureka-admin-service.path=/admin/**
+zuul.routes.eureka-admin-service.service-id=eureka-admin-service
 
 ribbon.eureka.enabled=true
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-ribbon.ReadTimeout=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=160000000
+ribbon.ReadTimeout=160000000
