--- a/Servisi/AdminService/src/main/resources/application.properties
+++ b/Servisi/AdminService/src/main/resources/application.properties
@@ -30,3 +30,5 @@ eureka.instance.prefer-ip-address=true
 spring.application.name=eureka-admin-service
 eureka.instance.hostname=localhost
 
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
