--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -9,5 +9,5 @@ zuul.routes.eureka-search-service.service-id=eureka-search-service
 
 ribbon.eureka.enabled=true
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-ribbon.ReadTimeout=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000000000
+ribbon.ReadTimeout=6000000000
