--- a/AgentAppBackend/src/main/resources/application.properties
+++ b/AgentAppBackend/src/main/resources/application.properties
@@ -44,3 +44,5 @@ spring.mail.port=587
 spring.mail.username=94d2ddc5c603db
 spring.mail.password=3a0e729a44a2bf
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+logging.file.name=app.log
