--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -13,3 +13,5 @@ ribbon.eureka.enabled=true
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=160000000
 ribbon.ReadTimeout=160000000
+
+logging.file.name=app.log
