--- a/Servisi/ProfilService/src/main/resources/application.properties
+++ b/Servisi/ProfilService/src/main/resources/application.properties
@@ -10,3 +10,5 @@ eureka.instance.prefer-ip-address=true
 spring.application.name=eureka-profil-service
 eureka.instance.hostname=localhost
 
+logging.file.name=app.log
+
