--- a/Servisi/AdminService/src/main/resources/application.properties
+++ b/Servisi/AdminService/src/main/resources/application.properties
@@ -32,3 +32,16 @@ eureka.instance.hostname=localhost
 
 feign.client.config.default.connectTimeout: 160000000
 feign.client.config.default.readTimeout: 160000000
+
+
+# Output to a temp_folder/file
+
+
+#logging.path=/my-folder/
+#logging.level.com.admin.adminServis=info
+
+# Logging pattern for the console
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+# Logging pattern for file
+#logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+logging.file.name=app.log
