--- a/Servisi/AuthorizationService/src/main/resources/application.properties
+++ b/Servisi/AuthorizationService/src/main/resources/application.properties
@@ -31,3 +31,5 @@ eureka.instance.hostname=localhost
 
 feign.client.config.default.connectTimeout: 160000000
 feign.client.config.default.readTimeout: 160000000
+
+logging.file.name=app.log
