--- a/Servisi/OglasService/src/main/resources/application.properties
+++ b/Servisi/OglasService/src/main/resources/application.properties
@@ -30,4 +30,4 @@ eureka.instance.prefer-ip-address=true
 spring.application.name=eureka-oglas-service
 eureka.instance.hostname=localhost
 
-
+logging.file.name=app.log
