--- a/Servisi/SearchService/src/main/resources/application.properties
+++ b/Servisi/SearchService/src/main/resources/application.properties
@@ -30,4 +30,5 @@ eureka.instance.prefer-ip-address=true
 spring.application.name=eureka-search-service
 eureka.instance.hostname=localhost
 
+logging.file.name=app.log
 
