--- a/Servisi/ZahtevService/src/main/resources/application.properties
+++ b/Servisi/ZahtevService/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
 spring.main.allow-bean-definition-overriding=true
+
+logging.file.name=app.log
