--- a/AgentAppBackend/src/main/resources/application.properties
+++ b/AgentAppBackend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #SSL Key Info
 server.ssl.enabled = true
 server.ssl.key-store-password=bsep20
-server.ssl.key-store=src/main/resources/ebininfosoft-ssl-key.p12
+#server.ssl.key-store=src/main/resources/ebininfosoft-ssl-key.p12
+server.ssl.key-store=src/main/resources/server.cer
 server.ssl.key-store-type=PKCS12
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 
