--- a/Servisi/AdminService/src/main/resources/application.properties
+++ b/Servisi/AdminService/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+#server.ssl.key-store-type=JKS
+#server.ssl.key-store=classpath:admin.jks
+#server.ssl.key-store-password=bsep20
+#server.ssl.key-alias=tomcat
+
+#security.require-ssl=true
+
+
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 
