ocenjivanje od strane usera
ocenjivanje od strane usera

--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -12,6 +12,8 @@ zuul.routes.eureka-authorization-service.path=/auth/**
 zuul.routes.eureka-authorization-service.service-id=eureka-authorization-service
 zuul.routes.eureka-search-service.path=/search/**
 zuul.routes.eureka-search-service.service-id=eureka-search-service
+zuul.routes.eureka-commentrating-service.path=/komentar/**
+zuul.routes.eureka-commentrating-service.service-id=eureka-commentrating-service
 zuul.routes.eureka-admin-service.path=/admin/**
 zuul.routes.eureka-admin-service.service-id=eureka-admin-service
 
