--- a/ServisiFront/package.json
+++ b/ServisiFront/package.json
@@ -24,6 +24,8 @@
     "@material/button": "^6.0.0",
     "@material/dialog": "^6.0.0",
     "@material/menu": "^6.0.0",
+    "angular-star-rating": "^4.0.0-beta.3",
+    "css-star-rating": "^1.2.4",
     "hammerjs": "^2.0.8",
     "material-table": "^1.60.0",
     "ng-pick-datetime": "^7.0.0",
