--- a/AgentAppBackend/src/main/resources/application.properties
+++ b/AgentAppBackend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #SSL Key Info
-server.ssl.enabled = true
-server.ssl.key-store-password=bsep20
-server.ssl.key-store=src/main/resources/ebininfosoft-ssl-key.p12
-server.ssl.key-store-type=PKCS12
+#server.ssl.enabled = true
+#server.ssl.key-store-password=bsep20
+#server.ssl.key-store=src/main/resources/ebininfosoft-ssl-key.p12
+#server.ssl.key-store-type=PKCS12
 
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
