--- a/Servisi/ZahtevService/src/main/resources/application.properties
+++ b/Servisi/ZahtevService/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.main.allow-bean-definition-overriding=true
 
 logging.file.name=app.log
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
