--- a/Servisi/MessageService/src/main/resources/application.properties
+++ b/Servisi/MessageService/src/main/resources/application.properties
@@ -1,2 +1,36 @@
+#Spring DataSource
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_SCHEMA:poruka}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+
+#JPA-Hibernate
+spring.jpa.show-sql = true
+
+#kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#https://stackoverflow.com/questions/43905119/postgres-error-method-org-postgresql-jdbc-pgconnection-createclob-is-not-imple
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#optimizacija za postgres upite
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.main.allow-bean-definition-overriding=true
+
+
+eureka.client.service-url.defaultZone=http://${REGISTRY_HOST:localhost}:${REGISTRY_PORT:8761}/eureka/
+eureka.client.service-url.healthcheck.enabled=true
+eureka.instance.prefer-ip-address=true
+
+server.port=8099
+spring.application.name=eureka-message-service
+eureka.instance.hostname=localhost
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
 
 logging.file.name=app.log
