--- a/Servisi/GatewayService/src/main/resources/application.properties
+++ b/Servisi/GatewayService/src/main/resources/application.properties
@@ -16,6 +16,8 @@ zuul.routes.eureka-commentrating-service.path=/komentar/**
 zuul.routes.eureka-commentrating-service.service-id=eureka-commentrating-service
 zuul.routes.eureka-admin-service.path=/admin/**
 zuul.routes.eureka-admin-service.service-id=eureka-admin-service
+zuul.routes.eureka-message-service.path=/message/**
+zuul.routes.eureka-message-service.service-id=eureka-message-service
 
 ribbon.eureka.enabled=true
 
