--- a/Servisi/MessageService/src/main/resources/application.properties
+++ b/Servisi/MessageService/src/main/resources/application.properties
@@ -1,2 +1,24 @@
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://${DATABASE_DOMAIN:localhost}:${DATABASE_PORT:5432}/${DATABASE_SCHEMA:message}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+
+#JPA-Hibernate
+spring.jpa.show-sql = true
+
+#kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#https://stackoverflow.com/questions/43905119/postgres-error-method-org-postgresql-jdbc-pgconnection-createclob-is-not-imple
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#optimizacija za postgres upite
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.main.allow-bean-definition-overriding=true
 
 logging.file.name=app.log
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
