Registracija agenta i firme na servisima odradjena

--- a/Servisi/AuthorizationService/src/main/resources/application.properties
+++ b/Servisi/AuthorizationService/src/main/resources/application.properties
@@ -42,3 +42,10 @@ feign.client.config.default.connectTimeout: 160000000
 feign.client.config.default.readTimeout: 160000000
 
 logging.file.name=app.log
+
+#za email
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=94d2ddc5c603db
+spring.mail.password=3a0e729a44a2bf
+spring.mail.properties.mail.smtp.starttls.enable = true
